<resources>
    <string name="app_name">RainbowSample</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="no_account_signup">Don\'t have an account ? Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="account_sign_in">Already have an account ? Sign in</string>
    <string name="username_required">Username is required</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="password_required">Password is required</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="send_code">Send code</string>
    <string name="validate">Validate</string>
    <string name="enter_digit_code">Please enter the 6-digit code you received by email</string>
    <string name="code">Code</string>
    <string name="please_enter_the_6_digit_code">Please enter the 6-digit code</string>
    <string name="password_rules">Expected a password matching the following rules: length must be between 12 and 64 characters, and contain at least 1 lowercase, 1 uppercase, 1 number and 1 special character</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="create_your_account">Create your account</string>
    <string name="please_enter_a_first_name">Please enter a first name</string>
    <string name="please_enter_a_last_name">Please enter a last name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="conversations">Conversations</string>
    <string name="rooms">Rooms</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="change_your_password">Change your password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="unknown">Unknown</string>
    <string name="last_message_sent">You : %s</string>
    <string name="last_message_received">%s : %s</string>
    <string name="you_have_started_a_conference">You have started a conference</string>
    <string name="has_started_a_conference">%s has started a conference</string>
    <string name="you_have_ended_the_conference">You have ended the conference</string>
    <string name="has_ended_the_conference">%s has ended the conference</string>
    <string name="you_called">You called %s</string>
    <string name="called_you">%s called you</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="incoming_call_forwarded">Incoming call forwarded</string>
    <string name="missed_call">Missed call</string>
    <string name="removed_user">Removed user</string>
    <string name="online">Online</string>
    <string name="offline_since">Offline since %1$s</string>
    <string name="offline">Offline</string>
    <string name="busy_video">Busy video</string>
    <string name="busy_audio">Busy audio</string>
    <string name="busy">Busy</string>
    <string name="away">Away</string>
    <string name="away_since">Away since %1$s</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="do_not_disturb_appointment">Do not disturb (appointment)</string>
    <string name="do_not_disturb_presentation">Do not disturb (presentation)</string>
    <string name="busy_screen_sharing">Busy screen sharing</string>
    <string name="online_on_mobile">Online on mobile</string>
    <string name="do_not_disturb_teams">Do not disturb (Teams)</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="new_group">Create group</string>
    <string name="there_are_no_results">There are no results</string>
    <string name="network_contact_title">Contacts in my network</string>
    <string name="my_contact_groups">My contact groups</string>
    <string name="my_company_contacts">My company contacts</string>
    <string name="phone_contacts">Phone contacts</string>
    <string name="phone_book_contacts">Phone book contacts</string>
    <string name="rainbow_contacts">Rainbow contacts</string>
    <string name="history">History</string>
    <string name="filter">Filter</string>
    <string name="filter_call_logs">Filter Call Logs</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="missed">Missed</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="create_a_group">Create a group</string>
    <string name="send_invitation_success">Invitation sent successfully</string>
    <string name="send_invitation_failure">Invitation failed</string>
    <string name="remove_contact_success">Contact successfully removed</string>
    <string name="remove_contact_failure">An error has occurred while removing contact</string>
    <string name="pending_invitation">An invitation is already in progress</string>

</resources>