<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/oval"
        android:importantForAccessibility="no"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="horizontal"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardElevation="20dp"
        app:cardBackgroundColor="@android:color/white"
        app:strokeWidth="0dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                android:textColor="?attr/colorPrimary"/>

            <LinearLayout
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintTop_toBottomOf="@id/login"
                app:layout_constraintBottom_toBottomOf="parent">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/login_edittext"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:hint="@string/username"
                    android:textColor="@android:color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/login_edittext"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/password"
                    android:textColor="@android:color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:autofillHints="password"
                    android:inputType="textPassword" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/send_code"
                    android:textSize="18sp"
                    android:layout_marginTop="30dp"
                    android:layout_marginHorizontal="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintTop_toBottomOf="@id/login"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_digit_code"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/login_edittext"
                    android:drawableStart="@drawable/baseline_numbers_24"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/code"
                    android:textColor="@android:color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:autofillHints="emailAddress"
                    android:inputType="number"
                    android:maxLength="6"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_code"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/validate"
                    android:textSize="18sp"
                    android:layout_marginTop="30dp"
                    android:layout_marginHorizontal="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintTop_toBottomOf="@id/login"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone">

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/login_edittext"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:hint="@string/first_name"
                    android:textColor="@android:color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:autofillHints="name"/>

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/login_edittext"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/last_name"
                    android:textColor="@android:color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:autofillHints="name"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/create_your_account"
                    android:textSize="18sp"
                    android:layout_marginTop="30dp"
                    android:layout_marginHorizontal="8dp"/>
            </LinearLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.6"
                app:lottie_rawRes="@raw/loading_animation"
                app:lottie_autoPlay="false"
                app:lottie_loop="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TextButton"
        android:text="@string/account_sign_in"
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintEnd_toEndOf="@id/card"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100sp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAccessibility="no" />

</androidx.constraintlayout.widget.ConstraintLayout>